# spawn

./: .spwnignore_global  CLAUDE.md  Cargo.toml  README.md
.claude/plans/: snoopy-bubbling-goblet.md
src/: config.rs  fs.rs  main.rs  processor.rs  repo.rs  spawn.rs  template.rs  writer.rs
src/commands/: alias.rs  mod.rs  spawn.rs
src/processor/: actions.rs  prompt.rs  tera_extensions.rs
src/template/: config.rs  plugins.rs
src/writer/: diff.rs  prompt.rs
