[package]
name = "spawn-cli"
version = "0.8.0"
edition = "2024"
description = "A command-line tool for creating files and folders from a template."
license = "MIT"
authors = ["Paul van der Meijs"]
repository = "https://github.com/paulvandermeijs/spawn"
keywords = ["cli"]

[[bin]]
name = "spwn"
path = "src/main.rs"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that would be too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_debug_formatting = "allow"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
clap-verbosity = "2.1.0"
comfy-table = "7.1.4"
console = "0.15.11"
directories = "6.0.0"
env_logger = "0.11.6"
gix = { version = "0.70.0", features = ["blocking-network-client"] }
globset = "0.4.15"
heck = "0.5.0"
inquire = "0.7.5"
log = "0.4.25"
pathdiff = "0.2.3"
serde = { version = "1.0.218", features = ["derive"] }
sha2 = "0.10.8"
similar = "2.7.0"
steel-core = "0.8.1"
tera = "1.20.0"
toml = "0.8.20"
walkdir = "2.5.0"
